modified:   PEtab to SEDML testing space.ipynb 	new file:   README.md Added README.md and updated PEtab to SEDML testing space notebook

--- a/PEtab to SEDML testing space.ipynb
+++ b/PEtab to SEDML testing space.ipynb
@@ -21,36 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from source.loader import file_loader\n",
-    "import source.builders as builders"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "petab_files = file_loader('test_benchmark/test_benchmark.yml')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Added DataGenerator to test_benchmark\\sedml_file.xml\n",
-      "Added DataDescription to test_benchmark\\sedml_file.xml\n",
-      "Added Output to test_benchmark\\sedml_file.xml\n",
-      "SED-ML file written to test_benchmark\\sedml_file.xml\n"
-     ]
-    }
-   ],
-   "source": [
+    "import source.builders as builders\n",
     "builders.build_sedml_file(yaml_file='test_benchmark/test_benchmark.yml')"
    ]
   }
